# ParallelProcess

./: CMakeLists.txt  README.md  child.cpp  main.cpp  methods.cpp  methods.hpp
bmp/: CMakeLists.txt  bmp.c  bmp.h
